Updated SVD_3 with working evalution of using the newly-created column called combine. Updated the readme.

--- a/SVD_2.ipynb
+++ b/SVD_2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single column experiment (CWE-119)"
+    "### Combined column experiment (All the Ys)"
    ]
   },
   {
